# dto-poc

./: .gitignore  Makefile  README.md  nx.json  package-lock.json  package.json  project.json  workspace.json
.github/workflows/: json-schema-diff.yml  openapi-changes.yml  openapi-diff.yml  openapi-oasdiff.yml  redocly-diff.yml  rusty-schema-diff.yml  spectral-diff.yml
infra/: docker-compose.yml  podman-compose.yml
infra/scripts/: create-topics.sh
libs/: README.md
libs/java-lib/: README.md  pom.xml
libs/python-lib/: README.md  pyproject.toml  setup.py
libs/ts-lib/: README.md  package-lock.json  package.json  tsconfig.json
makefiles/: demo.mk
openapi/: openapi-api.yaml  openapi-models.yaml
openapi/demo/: demo-api.yaml
openapi/demo/schemas/: demo-message.schema.json  item.schema.json
openapi/samples/: null-empty-sample.json  precision-roundtrip-sample.json
openapi/schemas/: demo-message.schema.json  demo-message.yaml  item.schema.json  item.yaml
scripts/: update_py_models_init.py
services/java-app/: pom.xml
services/java-app/src/main/java/demo/app/: DemoJavaApplication.java
services/java-app/src/main/java/demo/app/config/: JacksonConfig.java  KafkaConfig.java  (+1 more)
services/java-app/src/main/resources/: application.yml
services/python-app/: requirements.txt
services/python-app/app/: api_impl.py  config.py  kafka_bridge.py  main.py  models.py  storage.py
webapp/react-app/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
webapp/react-app/src/: App.tsx  styles.css
webapp/react-app/src/api/: README.md
(+7 files in other folders)
