[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "activate-api-models"
version = "1.0.0"
description = "Generated DTO models and API for Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "urllib3>=1.25.3",
    "python-dateutil",
    "pydantic>=1.10.5",
    "typing-extensions>=4.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.1",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["activate_api_models*"]

[tool.setuptools.package-data]
activate_api_models = ["py.typed"]
